Bug fix: adds extra padding to dismissable banner

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -204,6 +204,9 @@ $secondary-action-horizontal-padding: 1.5 * spacing(tight);
 }
 
 .hasDismiss {
+  &.newDesignLanguage {
+    padding-right: spacing() + spacing(extra-tight) + control-height();
+  }
   padding-right: spacing() + spacing(extra-tight) + control-height();
 }
 
